--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".monEspace"></activity>
+        <activity android:name=".DataEspace"></activity>
+        <activity android:name=".monEspace" />
         <activity android:name=".ConfigurationIndicateur" />
         <activity android:name=".Inscription" />
         <activity
